[tool.poetry]
name = "transact_api"
version = "0.0.4"
description = "Unofficial python wrapper for Transact API"
authors = ["Justin Chiou <justin@wunderfund.co>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
pre-commit = "^2.19.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^7.1.0"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.1"
mypy = "^0.961"
types-requests = "^2.28.7"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
