[tool.poetry]
authors = ["Justin Chiou <justin@wunderfund.co>"]
description = "Unofficial python wrapper for TransactAPI, provided by North Capital Private Securities"
name = "transact_api"
version = "0.0.4"

[tool.poetry.dependencies]
pre-commit = "^2.19.0"
python = "^3.8"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"
pre-commit = "^2.20.0"
pytest = "^7.1.0"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.1"
types-requests = "^2.28.7"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
profile = "black"
