[tool.poetry]
authors = ["Justin Chiou <justin@wunderfund.co>"]
description = "Unofficial python wrapper for TransactAPI, provided by North Capital Private Securities"
name = "transact_api"
version = "0.0.7"

[tool.poetry.dependencies]
pydantic = "^1.10.2"
python = "^3.8"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.3"
isort = "^5.10.1"
mypy = "^0.982"
pre-commit = "^2.20.0"
pytest = "^7.1.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.8.1"
types-requests = "^2.28.7"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.982"
pytest-cov = "^4.0.0"
types-requests = "^2.28.11.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
profile = "black"
